; ModuleID = '/home/carl/AnghaBench/libevent/extr_evrpc.c_evrpc_request_wrapper_free.c'
source_filename = "/home/carl/AnghaBench/libevent/extr_evrpc.c_evrpc_request_wrapper_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.evrpc_request_wrapper = type { %struct.evrpc_request_wrapper*, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.evrpc_request_wrapper*)* @evrpc_request_wrapper_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @evrpc_request_wrapper_free(%struct.evrpc_request_wrapper* %0) #0 {
  %2 = alloca %struct.evrpc_request_wrapper*, align 8
  store %struct.evrpc_request_wrapper* %0, %struct.evrpc_request_wrapper** %2, align 8
  %3 = load %struct.evrpc_request_wrapper*, %struct.evrpc_request_wrapper** %2, align 8
  %4 = getelementptr inbounds %struct.evrpc_request_wrapper, %struct.evrpc_request_wrapper* %3, i32 0, i32 1
  %5 = load i32*, i32** %4, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load %struct.evrpc_request_wrapper*, %struct.evrpc_request_wrapper** %2, align 8
  %9 = getelementptr inbounds %struct.evrpc_request_wrapper, %struct.evrpc_request_wrapper* %8, i32 0, i32 1
  %10 = load i32*, i32** %9, align 8
  %11 = call i32 @evrpc_hook_context_free_(i32* %10)
  br label %12

12:                                               ; preds = %7, %1
  %13 = load %struct.evrpc_request_wrapper*, %struct.evrpc_request_wrapper** %2, align 8
  %14 = getelementptr inbounds %struct.evrpc_request_wrapper, %struct.evrpc_request_wrapper* %13, i32 0, i32 0
  %15 = load %struct.evrpc_request_wrapper*, %struct.evrpc_request_wrapper** %14, align 8
  %16 = call i32 @mm_free(%struct.evrpc_request_wrapper* %15)
  %17 = load %struct.evrpc_request_wrapper*, %struct.evrpc_request_wrapper** %2, align 8
  %18 = call i32 @mm_free(%struct.evrpc_request_wrapper* %17)
  ret void
}

declare dso_local i32 @evrpc_hook_context_free_(i32*) #1

declare dso_local i32 @mm_free(%struct.evrpc_request_wrapper*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
